--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/dark-style.css">
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 
     <title>I Grow Chicken</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="IGC-icon.png">
       
   </head>
   <body>
@@ -45,6 +46,11 @@
     </div>
 
     <app-root></app-root>
+
+    <!-- Calendly badge widget begin -->  
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/mike-waweru-ebit-plus/igc-demo-request?hide_gdpr_banner=1', text: 'Book a Demo', color: '#d6bc15', textColor: '#ffffff' }); }</script>
+    <!-- Calendly badge widget end -->
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
