--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <title>I Grow Chicken</title>
     <link rel="icon" type="image/x-icon" href="IGC-icon.png">
       
-  </head>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
   <body>
     
     <!-- Dark/Light Toggle -->
