--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
     <title>I Grow Chicken</title>
     <link rel="icon" type="image/x-icon" href="IGC-icon.png">
-      
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
   <body>
-    
+
     <!-- Dark/Light Toggle -->
     <div class="dark-version">
       <label id="switch" class="switch">
@@ -49,7 +49,7 @@
 
     <app-root></app-root>
 
-    <!-- Calendly badge widget begin -->  
+    <!-- Calendly badge widget begin -->
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/mike-waweru-ebit-plus/igc-demo-request?hide_gdpr_banner=1', text: 'Book a Demo', color: '#d6bc15', textColor: '#ffffff' }); }</script>
     <!-- Calendly badge widget end -->
