--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   <body>
 
     <!-- Dark/Light Toggle -->
-    <div class="dark-version">
+    <!-- <div class="dark-version">
       <label id="switch" class="switch">
           <input type="checkbox" onchange="toggleTheme()" id="slider">
           <span class="slider round"></span>
       </label>
-    </div>
+    </div> -->
 
     <!-- Preloader Area -->
     <div class="preloader">
